--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,18 +8,32 @@
         <item>Donut Hole</item>
     </string-array>
     <string-array name="yeast">
-        <item>Yeast</item>
-        <item>fs</item>
-        <item>f</item>
+        <item>Strawberry</item>
+        <item>Vanilla</item>
+        <item>Blueberry</item>
+        <item>Apple</item>
+        <item>Grape</item>
+        <item>Passionfruit</item>
     </string-array>
+
     <string-array name="cake">
-        <item>Yeast Donut</item>
-        <item>Cake Donut</item>
-        <item>Donut Hole</item>
+        <item>Birthday Cake</item>
+        <item>Chocolate Cake</item>
+        <item>Cheese Cake</item>
     </string-array>
+
     <string-array name="holes">
-        <item>Yeast Donut</item>
-        <item>Cake Donut</item>
-        <item>Donut Hole</item>
+        <item>Original</item>
+        <item>French</item>
+        <item>Powder</item>
+    </string-array>
+
+    <string-array name="quantity">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+        <item>4</item>
+        <item>5</item>
+        <item>6</item>
     </string-array>
 </resources>
