--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="donutheader">Order a Donut</string>
     <string name="donuttotal">Total $</string>
     <string name="removedash">-</string>
+    <string name="addplus">+</string>
     <string name="storeorderheader">Store Orders</string>
 
     <string name="DonutDropDown">Select a Donut</string>
